--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: docs
 
 website:
   title: "OuMark"
@@ -18,7 +19,9 @@ website:
 
 format:
   html:
-    theme: simplex
+    theme: 
+      light: simplex
+      dark: darkly
     css: styles.css
     toc: true
 
