update domain setting

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,9 +21,7 @@ website:
 
 format:
   html:
-    theme: 
-      light: simplex
-      dark: darkly
+    theme: cosmo
     css: styles.css
     toc: true
 
